<resources>
    <string name="app_name">Assignment3</string>
    <string name="Brugernavn">Brugernavn*</string>
    <string name="Kodeord">Kodeord*</string>
    <string name="GentagKodeord">Gentag Kodeord*</string>
    <string name="Køn">Køn</string>
    <string name="Mand">Mand</string>
    <string name="Kvinde">Kvinde</string>
    <string name="Fødselsdag">Fødselsdag</string>
    <string name="Vægt">Vægt</string>
    <string name="Højde">Højde</string>
    <string name="Fortryd">Fortryd</string>
    <string name="Opret">Opret</string>
    <string name="Fortsæt">Fortsæt</string>
    <string name="Kaloriemål">Dit kaloriemål er:</string>
    <string-array name="activity_level">
        <item>Inaktiv</item>
        <item>Let aktiv</item>
        <item>Moderat aktiv</item>
        <item>Meget aktiv</item>
        <item>Ekstremt aktiv</item>
    </string-array>
    <string name="Login">Login</string>
    <string name="Registrer">Registrer</string>
    <string name="ForsaetUdenLogin">Forsæt uden login</string>
    <string name="minimum_password">Koreord for kort, skriv minimum 6 karakterer</string>
    <string name="MakroNæring">Makronæringsstoffer</string>
    <string name="Kulhydrater">Kulhydrater:</string>
    <string name="Fedt">Fedt:</string>
    <string name="Protein">Protein:</string>
    <string name="DuHarGået">Du har gået:</string>
    <string name="Redigerinfo">Rediger info</string>
    <string name="LogAf">Log Af</string>
    <string name="auth_failed">Godkendelse fejlede, tjek din email og kodeord eller tilmed dig</string>
    <string name="Aktivitetsniveau">Aktivitits niveau</string>
    <string name="AppName" translatable="false"><u>Kcal-Calc</u></string>
    <string name="EnterWeight">Tilføj Vægt</string>
    <string name="EnterBirthday">Tilføj fødselsdag</string>
    <string name="EnterGender">Vælg et køn</string>
    <string name="ProblemCalcData">Et problem opstod ved hentning af information fra CalcActivity</string>
    <string name="EnterHeight">Tilføj Højde</string>
</resources>
